# ChatGPT_Scan

./: .gitignore  Cargo.toml
base/: Cargo.toml
base/src/: errors.rs  lib.rs  models.rs  params.rs  utils.rs
logger/: Cargo.toml
logger/src/: lib.rs  logger.rs  main.rs
quote_server/: Cargo.toml
quote_server/src/: lib.rs  main.rs  state.rs  ws_client.rs
quote_server/src/binance/: mod.rs
quote_server/src/data_structure/: bookticker.rs  mod.rs  orderbook.rs
quote_server/src/maicoin/: mod.rs  ws_client.rs
strategy/: Cargo.toml
strategy/src/: lib.rs  main.rs  triarb_runner.rs
trade_server/: Cargo.toml
trade_server/src/: common.rs  lib.rs  main.rs  models.rs
trade_server/src/exchanges/: binance.rs  maicoin.rs  mod.rs
tri_arb/: Cargo.toml
tri_arb/config/: maicoin.toml
tri_arb/src/: lib.rs  main.rs  models.rs
tri_arb/src/exchanges/: maicoin.rs
user_data/: Cargo.toml
user_data/src/: lib.rs  main.rs  models.rs  state.rs  ws_client.rs
user_data/src/exchanges/: maicoin.rs  mod.rs
websocket_client/: Cargo.toml
websocket_client/src/: lib.rs
