[package]
name = "base"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
toml = "0.8"
regex = "1.0"
rust_decimal = "1.35"
rust_decimal_macros = "1"