[package]
name = "strategy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
logger = { path = "../logger" }
quote_server = { path = "../quote_server" } # Path to your quote server module
tokio-tungstenite = "0.23.1"
url = "2.2"
futures = "0.3.30"