[package]
name = "tri_arb"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
rust_decimal_macros = "1"
base = { path = "../base" }
user_data = { path = "../user_data" }
strategy = { path = "../strategy" }
quote_server = { path = "../quote_server" }
trade_server = { path = "../trade_server" }
logger = { path = "../logger" }
log = "0.4"