[package]
name = "user_data"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures-util = "0.3"
hmac = "0.12"
sha2 = "0.10.6"
hex = "0.4.3"
chrono = "0.4.19"
base = { path = "../base" }
trade_server = { path = "../trade_server" }
websocket_client = { path = "../websocket_client" }